<resources>
    <string name="app_name">JobTrackSA</string>
    <string name="hello_world">Hello World!</string>
    <string name="jobtrack_sa">JobTrack SA</string>
    <string name="track_opportunities_tagline">Track opportunities. Build your future.</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_subtitle">Sign in to continue managing your applications.</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_account_register">Don\'t have an account? Register</string>
    <string name="create_account">Create Account</string>
    <string name="start_tracking_tagline">Start tracking your career opportunities.</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account_login">Already have an account? Login</string>
</resources>
